--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "eslint-plugin-jest": "^27.4.2",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
